# XenonEngine

./: .gitignore  CMakeLists.txt  Doxyfile  VulkanDevices.cpp  VulkanDevices.h  VulkanEngineWIP.sln  VulkanEngineWIP.vcxproj  VulkanEngineWIP.vcxproj.filters  VulkanInstance.cpp  VulkanInstance.h  config.h  createInstance.cpp  debug_funcs.cpp  debug_funcs.h  gitignore  helperFuncs.cpp  helperFuncs.h  main.cpp
doxyOut/html/: BufferManager_8cpp.html  BufferManager_8cpp__incl.map  BufferManager_8cpp__incl.md5  BufferManager_8h.html  BufferManager_8h.js  BufferManager_8h__dep__incl.map  BufferManager_8h__dep__incl.md5  BufferManager_8h__incl.map  BufferManager_8h__incl.md5  BufferManager_8h_source.html  Buffer_8cpp.html  Buffer_8cpp__incl.map  Buffer_8cpp__incl.md5  Buffer_8h.html  Buffer_8h.js  Buffer_8h__dep__incl.map  Buffer_8h__dep__incl.md5  Buffer_8h__incl.map  Buffer_8h__incl.md5  Buffer_8h_source.html  Camera_8cpp.html  Camera_8cpp__incl.map  Camera_8cpp__incl.md5  Camera_8h.html  Camera_8h.js  Camera_8h__dep__incl.map  Camera_8h__dep__incl.md5  Camera_8h__incl.map  Camera_8h__incl.md5  Camera_8h_source.html  DebugManager_8cpp.html  DebugManager_8cpp__incl.map  DebugManager_8cpp__incl.md5  DebugManager_8h.html  DebugManager_8h.js  DebugManager_8h__dep__incl.map  DebugManager_8h__dep__incl.md5  DebugManager_8h__incl.map  DebugManager_8h__incl.md5  DebugManager_8h_source.html  (+1871 more)
doxyOut/latex/: BufferManager_8cpp.tex  BufferManager_8cpp__incl.md5  BufferManager_8h.tex  BufferManager_8h__dep__incl.md5  BufferManager_8h__incl.md5  BufferManager_8h_source.tex  Buffer_8cpp.tex  Buffer_8cpp__incl.md5  Buffer_8h.tex  Buffer_8h__dep__incl.md5  Buffer_8h__incl.md5  Buffer_8h_source.tex  Camera_8cpp.tex  Camera_8cpp__incl.md5  Camera_8h.tex  Camera_8h__dep__incl.md5  Camera_8h__incl.md5  Camera_8h_source.tex  DebugManager_8cpp.tex  ECS_8cpp.tex  (+640 more)
include/: Buffer.h  BufferManager.h  Camera.h  DebugManager.h  GraphicsPipeline.h  IO.h  Image.h  ImageManager.h  MemoryUtils.h  MeshManager.h  Renderer.h  ShaderLoader.h  Swapchain.h  SwapchainRecreater.h  ThreadPool.h  UniformBufferManager.h  Vertex.h  VulkanDevices.h  VulkanInstance.h  config.h  cstm_types.h
src/: Buffer.cpp  BufferManager.cpp  Camera.cpp  DebugManager.cpp  GraphicsPipeline.cpp  IO.cpp  Image.cpp  ImageManager.cpp  MemoryUtils.cpp  MeshManager.cpp  Renderer.cpp  ShaderLoader.cpp  Swapchain.cpp  SwapchainRecreater.cpp  ThreadPool.cpp  UniformBufferManager.cpp  VertexManager.cpp  VulkanDevices.cpp  VulkanInstance.cpp  cstm_types.cpp  helperFuncs.cpp  main.cpp
(+225 files in other folders)
